--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "frontend for checking grammartical errors",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/Rna1h/grammar-fix/issues"
   },
-  "homepage": "https://github.com/Rna1h/grammar-fix#readme"
+  "homepage": "https://github.com/Rna1h/grammar-fix#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
